--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
-  <title>Calendário dinâmico</title>
+  <title>Calendário dinâmico - Inglês</title>
   <link rel="stylesheet" href="style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Link dos ícones do Google -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
+
 <body>
-  
+
+  <div class="wrapper">
+    <header>
+      <p class="current-date">September 2022</p>
+      <div class="icons">
+        <!-- Aplicação dos ícones do Google. -->
+        <span class="material-symbols-rounded">arrow_back</span>
+        <span class="material-symbols-rounded">arrow_forward</span>
+      </div>
+      <!-- <ul>
+        <li></li>
+      </ul> -->
+    </header>
+  </div>
+
 </body>
+
 </html>
