--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
+  <!-- Ícone da aba -->
+  <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/dakirby309/simply-styled/128/Calendar-icon.png"
+    type="image/x-icon">
   <title>Calendário dinâmico - Inglês</title>
+
   <link rel="stylesheet" href="style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,17 +19,66 @@
 <body>
 
   <div class="wrapper">
+
     <header>
-      <p class="current-date">September 2022</p>
+      <p class="current-date">September 2023</p>
       <div class="icons">
-        <!-- Aplicação dos ícones do Google. -->
+        <!-- Aplicação das setas de navegação. -->
         <span class="material-symbols-rounded">arrow_back</span>
         <span class="material-symbols-rounded">arrow_forward</span>
       </div>
-      <!-- <ul>
-        <li></li>
-      </ul> -->
     </header>
+
+    <div class="calendar">
+      <ul class="weekdays">
+        <li>Sun</li>
+        <li>Mon</li>
+        <li>Tues</li>
+        <li>Wed</li>
+        <li>Thu</li>
+        <li>Fri</li>
+        <li>Sat</li>
+      </ul>
+      <ul class="days">
+        <li class="inactive">28</li>
+        <li class="inactive">29</li>
+        <li class="inactive">30</li>
+        <li class="inactive">31</li>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+        <li>11</li>
+        <li>12</li>
+        <li>13</li>
+        <li>14</li>
+        <li>15</li>
+        <li>16</li>
+        <li>17</li>
+        <li>18</li>
+        <li>19</li>
+        <li>20</li>
+        <li>21</li>
+        <li>22</li>
+        <li>23</li>
+        <li>24</li>
+        <li>25</li>
+        <li>26</li>
+        <li class="active">27</li>
+        <li>28</li>
+        <li>29</li>
+        <li>30</li>
+        <li class="inactive" >1</li>
+
+
+      </ul>
+    </div>
   </div>
 
 </body>
