--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Link dos ícones do Google -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-  <script src="script.js" defer></script>
+  <script src="script.js"  defer></script>
   <!-- O "defer" é importante para garantir que o html/css seja carregado primeiro. -->
 </head>
 
@@ -26,8 +26,8 @@
       <p class="current-date"></p>
       <div class="icons">
         <!-- Aplicação das setas de navegação. -->
-        <span class="material-symbols-rounded">arrow_back</span>
-        <span class="material-symbols-rounded">arrow_forward</span>
+        <span id="prev" class="material-symbols-rounded">arrow_back</span>
+        <span id="next" class="material-symbols-rounded">arrow_forward</span>
       </div>
     </header>
 
@@ -41,45 +41,7 @@
         <li>Sex</li>
         <li>Sáb</li>
       </ul>
-      <ul class="days">
-        <li class="inactive">28</li>
-        <li class="inactive">29</li>
-        <li class="inactive">30</li>
-        <li class="inactive">31</li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li>10</li>
-        <li>11</li>
-        <li>12</li>
-        <li>13</li>
-        <li>14</li>
-        <li>15</li>
-        <li>16</li>
-        <li>17</li>
-        <li>18</li>
-        <li>19</li>
-        <li>20</li>
-        <li>21</li>
-        <li>22</li>
-        <li>23</li>
-        <li>24</li>
-        <li>25</li>
-        <li>26</li>
-        <li class="active">27</li>
-        <li>28</li>
-        <li>29</li>
-        <li>30</li>
-        <li class="inactive">1</li>
-
-
-      </ul>
+      <ul class="days"></ul>
     </div>
   </div>
 
