Problema com getmonth() resolvido.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <li>Sex</li>
         <li>Sáb</li>
       </ul>
-      <ul class="days"></ul>
+      <ul class="days">
+        <li class="active">ia</li>
+      </ul>
     </div>
   </div>
 
