Refatoração do código feita.

--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
 </head>
 
 <body>
-
+  <!-- Botão do modo escuro/claro -->
   <button class="material-symbols-outlined light-switcher">
     light_mode
   </button>
-  <!-- <span class="material-symbols-outlined">
-    mode_night
-    </span> -->
 
+  <!-- Relógio dinâmico -->
   <div class="clock">
     <div>
       <span id="hours">00</span>
@@ -45,7 +43,7 @@
 
   </div>
 
-
+  <!-- Calendário -->
   <div class="wrapper">
 
     <header>
@@ -76,11 +74,10 @@
   <footer>
     <div class="footer-wrapper">
 
-      <!-- <hr> -->
 
       <span class="video-footer footer-text">👾Vídeo👾 usado como referência: <a
           href="https://youtu.be/Z1BGAivZRlE">Create A Dynamic Calendar in HTML CSS & JavaScript</a></span>
-      <!-- <hr> -->
+
       <span class="link-footer footer-text">🔗Link🔗 do repositório: <a
           href="https://github.com/IasmimCristina/Calendario-Dinamico">Projeto Calendário Dinâmico</a></span>
 
